# CipherID

./: LICENSE  README.md  README.zh-CN.md  pyproject.toml
build_scripts/: build_exe.py  cipherid.spec
docs/: adding_a_cipher.md
src/cipherid/: __init__.py  cipher.py  cli.py  config.py  engine.py  flag.py  heuristics.py  image.py  plugins.py
src/cipherid/ciphers/: __init__.py  chinese.py  classical.py  encodings.py  esoteric.py  hashes.py  modern.py  tokens.py
src/cipherid/gui/: __init__.py  app.py  theme.py
tests/: test_engine.py  test_image.py
